--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.h2.console.enabled=true
 spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:taxidronedb
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/taxidronedb?serverTimezone=UTC
+
+#spring.datasource.initialization-mode=always
+#spring.jpa.hibernate.ddl-auto=update
